css/styles.css
/* ... */
/* LISTA REDES SOCIALES */
.footer__menu_redes{
    width: 200px;
    height: auto;
    display: flex;
    justify-content: center;
    align-items: center;
    grid-area: redes;
}
.footer__menu_redes img{
    width: 10%;
}
.footer__menu_redes a{
    color:white;
    text-decoration: none;
}
.footer__menu_redes a:hover{
    color: black;
}
.footer__menu_redes li{
    list-style-type: none;
}

/* TELEFONO */
.footer__telefono{
    text-align: center;
    grid-area: telefono;
}
.footer__telefono h3,h4{
    color: white;
}

/* DERECHOS RESERVADOS */
.derechos__container{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 10dvh;
    grid-area: derechos;
    margin: 20px;
}
.derechos__container p{
    font-size: 10px;
    color: white;
}




/* ------------ NOSOTROS------------- */

/* ------ VIDEO Y HISTORIA ------ */
.nosotros__container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100dvh;
}

.video__nosotros{
    padding: 20px;
}

.video__nosotros .video{
    width: 300px;
    height: 200px;
    border-radius: 30px;
    border: 3px solid #004aad;
}

@media (min-width:600px){
    .nosotros__container{
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        height: 120dvh;
    }

    .video__nosotros .video{
        width: 500px;
        height: 280px;
    }

    .sobrenosotros{
        max-width: 80%;
    }
    .titulo_sobre_nosotros h1{
        text-align: center;
        font-size: 30px;
    }
    .sobrenosotros p{
        font-size: 16px;
    }
}

@media (min-width:900px){
    .video__nosotros .video{
        width: 500px;
        height: 280px;
    }
}

.titulo_sobre_nosotros span{
    color: #004aad;
}

.titulo_sobre_nosotros h1{
    text-align: center;
    font-size: 30px;
    color: black;
}

.sobrenosotros p{
    font-size: 13px;
    color: black;
}

.boton_ver_producto{
    display: flex;
    justify-content: center;
    align-items: center;
}

.boton_ver_producto button{
    background-color: #004aad;
    padding: 10px;
    border: none;
    border-radius: 20px;
    color: white;
}

.boton_ver_producto button:hover{
    background-color: #1368d6;
    color: white;
}

@media (min-width:1040px){

    .nosotros__container{
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        height: 130dvh;
    }

    .video__nosotros .video{
        width: 700px;
        height: 360px;
    }

    .sobrenosotros{
        max-width: 80%;
    }
    .titulo_sobre_nosotros h1{
        text-align: center;
        font-size: 30px;
    }
    .sobrenosotros p{
        font-size: 14px;
    }
}




/* ------------ PRODUCTOS ------------- */

.productos__container{
    width: 100%;
    height: 150dvh;
    padding: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.productos__container h1{
    text-align: center;
    font-size: 20px;
}

.productos_titulo{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 15dvh;
}

.productos__pack{
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
}

.contenedor__row{
    display: flex;
    justify-content: center;
    align-items: center;
}

.imagen_pack_b h2, p, label{
    color: rgb(255, 255, 255);
}

.datos_paquete p{
    color: rgb(255, 255, 255);
}

.carta{
    width: 100%;
    height: 330px;
    max-width: 320px;
    background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../assets/img/deslizadores_taplaverde.webp);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    opacity: 2.6;
    border-radius: 30px;
    border:#004aad solid 5px;
    margin: 3px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.seccion_compra .select_colores{
    color: white;
    background-color: #185ab1;
    border: none;
    padding: 10px;
    margin: 10px;
    border-radius: 10px;
}

.seccion_compra .button_compra{
    color: white;
    background-color: #004aad;
    border: none;
    padding: 10px;
    margin: 10px;
    border-radius: 10px;
}

.seccion_compra .button_compra:hover{
    background-color: #3772c0;

}



@media (min-width:632px){
    .productos__container{
        width: 100%;
        height: 120dvh;
        padding: 20px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .carta{
        height: 380px;
    }
}

@media (min-width:935px){
    .productos__container{
        width: 100%;
        height: 90dvh;
    }

    .productos__pack{
        height: 700px;
    }
    .carta{
        height: 380px;
    }

    .productos_titulo{
        display: flex;
        justify-content: center;
        align-items: center;
        max-width: 80%;
    }
    .productos__container h1{
        font-size: 40px;
    }

}







/* ------------ INFORMACION------------- */

.datos_informacion{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 130dvh;
    padding: 20px;
}

.datos_titulo{
    text-align: center;
}

.imagen_medidas{
    background-image: url(../assets/img/medidas.webp);
    width: 100%;
    height: 200px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    margin: 20px 0;

}

.informacion_materiales dt{
    color: #004aad;
}

.tabla__contenedora{
    display: flex;
    justify-content: center;
    align-items: center;
}

.datos_informacion td{
    background-color: #b6bec7;
    font-size: 15px;
    margin: 13px;
    padding: 5px;
    border: 2px solid black 
}

.titulo_tabla td{
    font-size: 13px;
    color: #004aad;
    font-weight: 700;
}
/* ... */

